<resources>
    <string name="app_name">Cevher</string>
    <string name="ayarlar">Ayarlar</string>
    <string name="sifirla">Sayacı Yenile</string>
    <string name="bilgi">Bilgi</string>
    <string name="tesbih">Sanal Tesbih</string>
    <string name="tesbihat">Namaz Tesbihatı</string>
    <string name="yenile">Yenile</string>
    <string name="cevsen1">Cevşen</string>
    <string name="tamam">Tamam</string>
    <string name="manuel">Manuel Tesbih</string>
    <string name="cvsarapca">Arapça</string>
    <string name="cvsturkce">Türkçe</string>
    <string name="cvsmeal">Meal</string>
    <string name="kaydet">Tamam</string>
    <string name="cevsen">Cevşen</string>
    <string name="kuran">"Kuran-ı Kerim"</string>
    <string-array name="tecvid">

        <item>Tecvid Dersleri</item>
        <item>Ders1</item>
        <item>Ders2</item>
        <item>Ders3</item>
        <item>Ders4</item>
        <item>Ders5</item>
        <item>Ders6</item>
        <item>Ders7</item>
        <item>Ders8</item>
        <item>Ders9</item>
        <item>Ders10</item>
        <item>Ders11</item>
        <item>Ders12</item>
        <item>Ders13</item>
    </string-array>
    <string name="veritabani">VeriTabani</string>
    <string name="anasayfa">Anasayfa</string>
    <string name="ilmihal">İlmihal</string>
    <string-array name="kategoriler">
        <item>KURANDA PEYGAMBER DUALARI</item>
        <item>SABAH DUALARI</item>
        <item>AKŞAM DUALARI</item>
        <item>CUMA OKUNACAK DUALAR</item>
        <item>AŞİRLER</item>
        <item>ESMA-İ HÜSNA</item>
        <item>EFENDİMİZİN MUTAD OKUDUĞU SURELER</item>
        <item>GÜNLÜK DUALAR</item>
        <item>MÜBAREK GÜN VE GECELERDE YAPILACAK DUALAR</item>
        <item>MUHTELİF DUALAR</item>
        <item>HADİSLER</item>
        <item>BENİM SEÇTİKLERİM</item>

    </string-array>
    <string-array name="kategoriler_ekle">
        <item>KURANDA PEYGAMBER DUALARI</item>
        <item>SABAH DUALARI</item>
        <item>AKŞAM DUALARI</item>
        <item>CUMA OKUNACAK DUALAR</item>
        <item>AŞİRLER</item>
        <item>ESMA-İ HÜSNA</item>
        <item>EFENDİMİZİN MUTAD OKUDUĞU SURELER</item>
        <item>GÜNLÜK DUALAR</item>
        <item>MÜBAREK GÜN VE GECELERDE YAPILACAK DUALAR</item>
        <item>MUHTELİF DUALAR</item>
        <item>HADİSLER</item>
        <item>BENİM SEÇTİKLERİM</item>
        <item>İLMİHAL</item>

    </string-array>
    <string-array name="cevsen_listesi">

        <item>"Cevşen\'ül Kebir"</item>
        <item>1. Kısım (Bab 1-10) </item>
        <item>2. Kısım (Bab 11-20)</item>
        <item>3. Kısım (Bab 21-30)</item>
        <item>4. Kısım (Bab 31-40)</item>
        <item>5. Kısım (Bab 41-50)</item>
        <item>6. Kısım (Bab 51-60)</item>
        <item>7. Kısım (Bab 61-70)</item>
        <item>8. Kısım (Bab 71-80)</item>
        <item>9. Kısım (Bab 81-90)</item>
        <item>10. Kısım (Bab 91-100)</item>
        <item>Hatim Duası</item>

    </string-array>
    <string-array name="kuran_listesi">

        <item>"Kur\'an-ı Kerim"</item>
        <item>1- Fatiha Suresi</item>
        <item>2- Bakara Suresi</item>
        <item>3- Ali İmran Suresi</item>
        <item>4- Nisa Suresi</item>
        <item>5- Maide Suresi</item>
        <item>6- Enam Suresi</item>
        <item>7-  A\’râf Suresi</item>
        <item>8- Enfâl Suresi</item>
        <item>9- Tevbe Suresi</item>
        <item>10- Yûnus Suresi</item>
        <item>11- Hûd Suresi</item>
        <item>12- Yûsuf Suresi</item>
        <item>13- Ra’d Suresi</item>
        <item>14- İbrahim Suresi</item>
        <item>15- Hicr Suresi</item>
        <item>16- Nahl Suresi</item>
        <item>17- İsrâ Suresi</item>
        <item>18- Kehf Suresi</item>
        <item>19- Meryem Suresi</item>
        <item>20- Tâ-Hâ Suresi</item>
        <item>21- Enbiyâ Suresi</item>
        <item>22- Hac Suresi</item>
        <item>23- Mü’minûn Suresi</item>
        <item>24- Nûr Suresi</item>
        <item>25- Furkân Suresi</item>
        <item>26- Şu’arâ Suresi</item>
        <item>27- Neml Suresi</item>
        <item>28- Kasas Suresi</item>
        <item>29- Ankebût Suresi</item>
        <item>30- Rûm Suresi</item>
        <item>31- Lokmân Suresi</item>
        <item>32- Secde Suresi</item>
        <item>33- Ahzâb Suresi</item>
        <item>34- Sebe Suresi</item>
        <item>35- Fâtır Suresi</item>
        <item>36- Yâsîn Suresi</item>
        <item>37- Sâffât Suresi</item>
        <item>38- Sâd Suresi</item>
        <item>39- Zümer Suresi</item>
        <item>40- Mü’min Suresi</item>
        <item>41- Fussilet Suresi</item>
        <item>42- Şûrâ Suresi</item>
        <item>43- Zuhruf Suresi</item>
        <item>44- Duhân Suresi</item>
        <item>45- Câsiye Suresi</item>
        <item>46- Ahkâf Suresi</item>
        <item>47- Muhammed Suresi</item>
        <item>48- Fetih Suresi</item>
        <item>49- Hucurât Suresi</item>
        <item>50- Kâf Suresi</item>
        <item>51- Zâriyât Suresi</item>
        <item>52- Tûr Suresi</item>
        <item>53- Necm Suresi</item>
        <item>54- Kamer Suresi</item>
        <item>55- Rahmân Suresi</item>
        <item>56- Vâkı’a Suresi</item>
        <item>57- Hadîd Suresi</item>
        <item>58- Mücâdele Suresi</item>
        <item>59- Haşr Suresi</item>
        <item>60- Mümtehine Suresi</item>
        <item>61- Saff Suresi</item>
        <item>62- Cum’a Suresi</item>
        <item>63- Münâfikûn Suresi</item>
        <item>64- Teğâbun Suresi</item>
        <item>65- Talâk Suresi</item>
        <item>66- Tahrîm Suresi</item>
        <item>67- Mülk Suresi</item>
        <item>68- Kalem Suresi</item>
        <item>69- Hakka Suresi</item>
        <item>70- Mearic Suresi</item>
        <item>71- Nuh Suresi</item>
        <item>72- Cin Suresi</item>
        <item>73- Müzzemmil Suresi</item>
        <item>74- Müddessir Suresi</item>
        <item>75- Kıyâme Suresi</item>
        <item>76- İnsan Suresi</item>
        <item>77- Mürselât Suresi</item>
        <item>78- Nebe Suresi</item>
        <item>79- Nâzi’ât  Suresi</item>
        <item>80- Abese Suresi</item>
        <item>81- Tekvîr Suresi</item>
        <item>82- İnfitâr Suresi</item>
        <item>83- Mutaffifîn Suresi</item>
        <item>84- İnşikâk Suresi</item>
        <item>85- Bürûc Suresi</item>
        <item>86- Târık Suresi</item>
        <item>87- A’lâ  Suresi</item>
        <item>88- Ğâşiye Suresi</item>
        <item>89- Fecr Suresi</item>
        <item>90- Beled Suresi</item>
        <item>91- Şems Suresi</item>
        <item>92- Leyl Suresi</item>
        <item>93- Duha Suresi</item>
        <item>94- İnşirah Suresi</item>
        <item>95- Tin Suresi</item>
        <item>96- Alak Suresi</item>
        <item>97- Kadir Suresi</item>
        <item>98- Beyyine Suresi</item>
        <item>99- Zilzal Suresi</item>
        <item>100- Adiyat Suresi</item>
        <item>101- Karia Suresi</item>
        <item>102- Tekasür Suresi</item>
        <item>103- Asr Suresi</item>
        <item>104- Hümeze Suresi</item>
        <item>105- Fil Suresi</item>
        <item>106- Kureyş Suresi</item>
        <item>107- Maun Suresi</item>
        <item>108- Kevser Suresi</item>
        <item>109- Kafirun Suresi</item>
        <item>110- Nasr Suresi</item>
        <item>111- Tebbet Suresi</item>
        <item>112- İhlas Suresi</item>
        <item>113- Felak Suresi</item>
        <item>114- Nas Suresi</item>
        <item>Hatim Duası</item>
    </string-array>
    <string-array name="kategori_pozisyon">

        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>


    </string-array>
    <string-array name="boyut">

        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
        <item>22</item>
        <item>24</item>
        <item>26</item>
        <item>28</item>
        <item>30</item>
        <item>32</item>
        <item>34</item>
        <item>36</item>
        <item>38</item>
        <item>40</item>
        <item>42</item>
        <item>44</item>
        <item>48</item>
        <item>48</item>


    </string-array>
    <string-array name="temalar">
        <item >Sayfa1</item>
        <item >Sayfa2</item>
        <item >Sayfa3</item>
        <item >Sayfa4</item>
        <item >Sayfa5</item>
        <item >Sayfa6</item>
        <item >Sayfa7</item>
        <item >Sayfa8</item>
        <item >Sayfa9</item>
        <item >Sayfa10</item>

    </string-array>
    <string-array name="tema_pozisyon">

        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>

    </string-array>
</resources>